--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,24 @@ button {
   transition: 0.2s all ease;
 }
 
+form {
+  margin-top: 50px;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: white;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  cursor: pointer;
+  transition: 0.2s all ease;
+  justify-content: center;
+  align-items: center;
+}
+
+textarea {
+  margin-right: 30px;
+  height: 50px;
+}
+
 button:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
