--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,7 @@ button {
   border: 1px solid rgba(255, 255, 255, 0.3);
   cursor: pointer;
   transition: 0.2s all ease;
+  margin-right: 10px;
 }
 
 form {
